Logistic Regression - Crop Recommendation

--- a/notebooks/CropRecommendation/CropRecommendation1/CropRecommendation/Models/cropRecommendationLogisticRegression.ipynb
+++ b/notebooks/CropRecommendation/CropRecommendation1/CropRecommendation/Models/cropRecommendationLogisticRegression.ipynb
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_Train,X_Test,y_Train,y_Test=train_test_split(X,y,test_size=0.1,random_state=10)"
+    "X_Train,X_Test,y_Train,y_Test=train_test_split(X,y,test_size=0.1,random_state=2)"
    ]
   },
   {
@@ -197,21 +197,21 @@
      "data": {
       "text/plain": [
        "      temperature   humidity    rainfall\n",
-       "428     26.398551  81.360289   98.167520\n",
-       "1177    23.106939  67.062305  162.576961\n",
-       "492     27.949725  76.637134  109.092163\n",
-       "1004    23.584193  72.004608  190.424216\n",
-       "995     40.102077  94.351102  149.119999\n",
+       "235     31.741054  68.635254   62.306173\n",
+       "1144    26.223674  62.265946  193.746197\n",
+       "748     23.714753  91.533312  121.896167\n",
+       "612     29.587484  80.919344   68.064173\n",
+       "321     18.297836  69.689762   49.391115\n",
        "...           ...        ...         ...\n",
-       "733     22.126594  90.978183  104.541228\n",
-       "1180    24.029525  58.848806  134.680397\n",
-       "1147    27.745770  54.369761  139.861943\n",
+       "466     26.126434  81.813650  104.481286\n",
+       "299     32.747739  67.779546   63.377844\n",
+       "493     25.010185  78.762609  108.369051\n",
        "527     29.980805  49.486133   91.822716\n",
-       "1149    26.673772  52.242263  156.154390\n",
+       "1192    25.627355  57.041511  188.550654\n",
        "\n",
        "[1080 rows x 3 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>temperature</th>\n      <th>humidity</th>\n      <th>rainfall</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>428</th>\n      <td>26.398551</td>\n      <td>81.360289</td>\n      <td>98.167520</td>\n    </tr>\n    <tr>\n      <th>1177</th>\n      <td>23.106939</td>\n      <td>67.062305</td>\n      <td>162.576961</td>\n    </tr>\n    <tr>\n      <th>492</th>\n      <td>27.949725</td>\n      <td>76.637134</td>\n      <td>109.092163</td>\n    </tr>\n    <tr>\n      <th>1004</th>\n      <td>23.584193</td>\n      <td>72.004608</td>\n      <td>190.424216</td>\n    </tr>\n    <tr>\n      <th>995</th>\n      <td>40.102077</td>\n      <td>94.351102</td>\n      <td>149.119999</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>733</th>\n      <td>22.126594</td>\n      <td>90.978183</td>\n      <td>104.541228</td>\n    </tr>\n    <tr>\n      <th>1180</th>\n      <td>24.029525</td>\n      <td>58.848806</td>\n      <td>134.680397</td>\n    </tr>\n    <tr>\n      <th>1147</th>\n      <td>27.745770</td>\n      <td>54.369761</td>\n      <td>139.861943</td>\n    </tr>\n    <tr>\n      <th>527</th>\n      <td>29.980805</td>\n      <td>49.486133</td>\n      <td>91.822716</td>\n    </tr>\n    <tr>\n      <th>1149</th>\n      <td>26.673772</td>\n      <td>52.242263</td>\n      <td>156.154390</td>\n    </tr>\n  </tbody>\n</table>\n<p>1080 rows × 3 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>temperature</th>\n      <th>humidity</th>\n      <th>rainfall</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>235</th>\n      <td>31.741054</td>\n      <td>68.635254</td>\n      <td>62.306173</td>\n    </tr>\n    <tr>\n      <th>1144</th>\n      <td>26.223674</td>\n      <td>62.265946</td>\n      <td>193.746197</td>\n    </tr>\n    <tr>\n      <th>748</th>\n      <td>23.714753</td>\n      <td>91.533312</td>\n      <td>121.896167</td>\n    </tr>\n    <tr>\n      <th>612</th>\n      <td>29.587484</td>\n      <td>80.919344</td>\n      <td>68.064173</td>\n    </tr>\n    <tr>\n      <th>321</th>\n      <td>18.297836</td>\n      <td>69.689762</td>\n      <td>49.391115</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>466</th>\n      <td>26.126434</td>\n      <td>81.813650</td>\n      <td>104.481286</td>\n    </tr>\n    <tr>\n      <th>299</th>\n      <td>32.747739</td>\n      <td>67.779546</td>\n      <td>63.377844</td>\n    </tr>\n    <tr>\n      <th>493</th>\n      <td>25.010185</td>\n      <td>78.762609</td>\n      <td>108.369051</td>\n    </tr>\n    <tr>\n      <th>527</th>\n      <td>29.980805</td>\n      <td>49.486133</td>\n      <td>91.822716</td>\n    </tr>\n    <tr>\n      <th>1192</th>\n      <td>25.627355</td>\n      <td>57.041511</td>\n      <td>188.550654</td>\n    </tr>\n  </tbody>\n</table>\n<p>1080 rows × 3 columns</p>\n</div>"
      },
      "metadata": {},
      "execution_count": 8
@@ -231,21 +231,21 @@
      "data": {
       "text/plain": [
        "      temperature   humidity    rainfall\n",
-       "123     18.833445  58.750820   79.753290\n",
-       "1036    23.890690  83.464091  167.723063\n",
-       "1034    23.668054  70.890007  184.463328\n",
-       "426     29.244064  77.320172   90.667279\n",
-       "726     22.921571  94.896134  105.694154\n",
+       "1049    26.389054  83.312403  176.151641\n",
+       "476     25.083474  80.261731   94.329615\n",
+       "61      25.755286  83.518271  245.662680\n",
+       "910     42.134740  91.704454  197.402901\n",
+       "68      23.641248  80.285979  263.110330\n",
        "...           ...        ...         ...\n",
-       "530     27.920633  51.779659  100.258567\n",
-       "948     42.547440  94.944821  214.410385\n",
-       "731     23.126527  94.712033  108.621183\n",
-       "965     32.500375  93.478888   71.737595\n",
-       "612     29.587484  80.919344   68.064173\n",
+       "869     25.354676  91.811832  116.755594\n",
+       "835     20.184323  90.654585  116.813097\n",
+       "137     21.541562  59.640242  109.751538\n",
+       "101     26.100184  71.574769  102.266244\n",
+       "272     28.206673  68.270852   64.328871\n",
        "\n",
        "[120 rows x 3 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>temperature</th>\n      <th>humidity</th>\n      <th>rainfall</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>123</th>\n      <td>18.833445</td>\n      <td>58.750820</td>\n      <td>79.753290</td>\n    </tr>\n    <tr>\n      <th>1036</th>\n      <td>23.890690</td>\n      <td>83.464091</td>\n      <td>167.723063</td>\n    </tr>\n    <tr>\n      <th>1034</th>\n      <td>23.668054</td>\n      <td>70.890007</td>\n      <td>184.463328</td>\n    </tr>\n    <tr>\n      <th>426</th>\n      <td>29.244064</td>\n      <td>77.320172</td>\n      <td>90.667279</td>\n    </tr>\n    <tr>\n      <th>726</th>\n      <td>22.921571</td>\n      <td>94.896134</td>\n      <td>105.694154</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>530</th>\n      <td>27.920633</td>\n      <td>51.779659</td>\n      <td>100.258567</td>\n    </tr>\n    <tr>\n      <th>948</th>\n      <td>42.547440</td>\n      <td>94.944821</td>\n      <td>214.410385</td>\n    </tr>\n    <tr>\n      <th>731</th>\n      <td>23.126527</td>\n      <td>94.712033</td>\n      <td>108.621183</td>\n    </tr>\n    <tr>\n      <th>965</th>\n      <td>32.500375</td>\n      <td>93.478888</td>\n      <td>71.737595</td>\n    </tr>\n    <tr>\n      <th>612</th>\n      <td>29.587484</td>\n      <td>80.919344</td>\n      <td>68.064173</td>\n    </tr>\n  </tbody>\n</table>\n<p>120 rows × 3 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>temperature</th>\n      <th>humidity</th>\n      <th>rainfall</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1049</th>\n      <td>26.389054</td>\n      <td>83.312403</td>\n      <td>176.151641</td>\n    </tr>\n    <tr>\n      <th>476</th>\n      <td>25.083474</td>\n      <td>80.261731</td>\n      <td>94.329615</td>\n    </tr>\n    <tr>\n      <th>61</th>\n      <td>25.755286</td>\n      <td>83.518271</td>\n      <td>245.662680</td>\n    </tr>\n    <tr>\n      <th>910</th>\n      <td>42.134740</td>\n      <td>91.704454</td>\n      <td>197.402901</td>\n    </tr>\n    <tr>\n      <th>68</th>\n      <td>23.641248</td>\n      <td>80.285979</td>\n      <td>263.110330</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>869</th>\n      <td>25.354676</td>\n      <td>91.811832</td>\n      <td>116.755594</td>\n    </tr>\n    <tr>\n      <th>835</th>\n      <td>20.184323</td>\n      <td>90.654585</td>\n      <td>116.813097</td>\n    </tr>\n    <tr>\n      <th>137</th>\n      <td>21.541562</td>\n      <td>59.640242</td>\n      <td>109.751538</td>\n    </tr>\n    <tr>\n      <th>101</th>\n      <td>26.100184</td>\n      <td>71.574769</td>\n      <td>102.266244</td>\n    </tr>\n    <tr>\n      <th>272</th>\n      <td>28.206673</td>\n      <td>68.270852</td>\n      <td>64.328871</td>\n    </tr>\n  </tbody>\n</table>\n<p>120 rows × 3 columns</p>\n</div>"
      },
      "metadata": {},
      "execution_count": 9
@@ -264,17 +264,17 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "428     banana\n",
-       "1177    coffee\n",
-       "492     banana\n",
-       "1004      jute\n",
-       "995     papaya\n",
-       "         ...  \n",
-       "733      apple\n",
-       "1180    coffee\n",
-       "1147    coffee\n",
-       "527      mango\n",
-       "1149    coffee\n",
+       "235     blackgram\n",
+       "1144       coffee\n",
+       "748         apple\n",
+       "612        grapes\n",
+       "321        lentil\n",
+       "          ...    \n",
+       "466        banana\n",
+       "299     blackgram\n",
+       "493        banana\n",
+       "527         mango\n",
+       "1192       coffee\n",
        "Name: label, Length: 1080, dtype: object"
       ]
      },
@@ -295,17 +295,17 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "123      maize\n",
-       "1036      jute\n",
-       "1034      jute\n",
-       "426     banana\n",
-       "726      apple\n",
-       "         ...  \n",
-       "530      mango\n",
-       "948     papaya\n",
-       "731      apple\n",
-       "965     papaya\n",
-       "612     grapes\n",
+       "1049         jute\n",
+       "476        banana\n",
+       "61           rice\n",
+       "910        papaya\n",
+       "68           rice\n",
+       "          ...    \n",
+       "869        orange\n",
+       "835        orange\n",
+       "137         maize\n",
+       "101         maize\n",
+       "272     blackgram\n",
        "Name: label, Length: 120, dtype: object"
       ]
      },
@@ -365,25 +365,25 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array(['banana', 'jute', 'jute', 'banana', 'orange', 'mango', 'banana',\n",
-       "       'rice', 'mango', 'apple', 'jute', 'jute', 'papaya', 'banana',\n",
-       "       'coffee', 'papaya', 'lentil', 'blackgram', 'rice', 'banana',\n",
-       "       'rice', 'mango', 'banana', 'coffee', 'banana', 'papaya', 'coffee',\n",
-       "       'blackgram', 'papaya', 'jute', 'blackgram', 'grapes', 'lentil',\n",
-       "       'grapes', 'apple', 'lentil', 'lentil', 'blackgram', 'apple',\n",
-       "       'coffee', 'blackgram', 'orange', 'rice', 'rice', 'lentil',\n",
-       "       'lentil', 'lentil', 'apple', 'grapes', 'coffee', 'coffee',\n",
-       "       'blackgram', 'papaya', 'blackgram', 'lentil', 'apple', 'banana',\n",
-       "       'apple', 'banana', 'apple', 'jute', 'jute', 'banana', 'apple',\n",
-       "       'mango', 'rice', 'rice', 'lentil', 'mango', 'blackgram', 'lentil',\n",
-       "       'jute', 'grapes', 'rice', 'jute', 'mango', 'jute', 'orange',\n",
-       "       'orange', 'rice', 'jute', 'banana', 'banana', 'rice', 'apple',\n",
-       "       'apple', 'apple', 'blackgram', 'mango', 'mango', 'coffee',\n",
-       "       'banana', 'jute', 'grapes', 'lentil', 'mango', 'banana', 'coffee',\n",
-       "       'jute', 'lentil', 'grapes', 'mango', 'blackgram', 'blackgram',\n",
-       "       'coffee', 'rice', 'papaya', 'papaya', 'apple', 'apple', 'lentil',\n",
-       "       'grapes', 'coffee', 'apple', 'lentil', 'mango', 'coffee', 'orange',\n",
-       "       'grapes', 'grapes'], dtype=object)"
+       "array(['jute', 'banana', 'rice', 'coffee', 'rice', 'coffee', 'grapes',\n",
+       "       'jute', 'apple', 'jute', 'grapes', 'blackgram', 'banana', 'lentil',\n",
+       "       'apple', 'blackgram', 'blackgram', 'papaya', 'apple', 'grapes',\n",
+       "       'coffee', 'banana', 'grapes', 'papaya', 'banana', 'jute', 'banana',\n",
+       "       'lentil', 'blackgram', 'rice', 'orange', 'orange', 'coffee',\n",
+       "       'mango', 'blackgram', 'jute', 'banana', 'coffee', 'papaya',\n",
+       "       'mango', 'papaya', 'lentil', 'grapes', 'lentil', 'jute', 'lentil',\n",
+       "       'banana', 'papaya', 'lentil', 'banana', 'lentil', 'apple',\n",
+       "       'papaya', 'grapes', 'blackgram', 'grapes', 'orange', 'papaya',\n",
+       "       'banana', 'jute', 'banana', 'papaya', 'jute', 'blackgram',\n",
+       "       'coffee', 'jute', 'mango', 'apple', 'papaya', 'papaya', 'lentil',\n",
+       "       'mango', 'mango', 'coffee', 'papaya', 'banana', 'rice', 'mango',\n",
+       "       'lentil', 'lentil', 'orange', 'lentil', 'coffee', 'rice', 'rice',\n",
+       "       'mango', 'apple', 'blackgram', 'grapes', 'jute', 'mango', 'lentil',\n",
+       "       'coffee', 'mango', 'rice', 'coffee', 'blackgram', 'banana', 'jute',\n",
+       "       'mango', 'mango', 'orange', 'lentil', 'blackgram', 'grapes',\n",
+       "       'grapes', 'jute', 'rice', 'papaya', 'orange', 'lentil',\n",
+       "       'blackgram', 'blackgram', 'papaya', 'blackgram', 'apple', 'apple',\n",
+       "       'papaya', 'papaya', 'blackgram'], dtype=object)"
       ]
      },
      "metadata": {},
@@ -403,17 +403,17 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "123      maize\n",
-       "1036      jute\n",
-       "1034      jute\n",
-       "426     banana\n",
-       "726      apple\n",
-       "         ...  \n",
-       "530      mango\n",
-       "948     papaya\n",
-       "731      apple\n",
-       "965     papaya\n",
-       "612     grapes\n",
+       "1049         jute\n",
+       "476        banana\n",
+       "61           rice\n",
+       "910        papaya\n",
+       "68           rice\n",
+       "          ...    \n",
+       "869        orange\n",
+       "835        orange\n",
+       "137         maize\n",
+       "101         maize\n",
+       "272     blackgram\n",
        "Name: label, Length: 120, dtype: object"
       ]
      },
@@ -434,7 +434,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.6583333333333333"
+       "0.6666666666666666"
       ]
      },
      "metadata": {},
@@ -445,6 +445,23 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn import metrics\n",
     "metrics.accuracy_score(y_Test,predicted_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "              precision    recall  f1-score   support\n\n       apple       0.50      0.57      0.53         7\n      banana       0.58      0.64      0.61        11\n   blackgram       0.86      1.00      0.92        12\n      coffee       0.70      1.00      0.82         7\n      grapes       0.60      0.75      0.67         8\n        jute       0.67      0.80      0.73        10\n      lentil       0.64      0.75      0.69        12\n       maize       0.00      0.00      0.00         7\n       mango       1.00      1.00      1.00        11\n      orange       0.33      0.22      0.27         9\n      papaya       0.40      0.40      0.40        15\n        rice       1.00      0.73      0.84        11\n\n    accuracy                           0.67       120\n   macro avg       0.61      0.65      0.62       120\nweighted avg       0.63      0.67      0.64       120\n\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_Test,predicted_value))"
    ]
   }
  ]
