--- a/notebooks/CropRecommendation/CropRecommendation1/FertilizerRecommendation/models/fertilizerRecommendationKNN.ipynb
+++ b/notebooks/CropRecommendation/CropRecommendation1/FertilizerRecommendation/models/fertilizerRecommendationKNN.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>Temparature</th>\n      <th>Humidity</th>\n      <th>Moisture</th>\n      <th>Soil Type</th>\n      <th>Crop Type</th>\n      <th>Nitrogen</th>\n      <th>Potassium</th>\n      <th>Phosphorous</th>\n      <th>Fertilizer Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>26</td>\n      <td>52</td>\n      <td>38</td>\n      <td>4</td>\n      <td>3</td>\n      <td>37</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>29</td>\n      <td>52</td>\n      <td>45</td>\n      <td>2</td>\n      <td>8</td>\n      <td>12</td>\n      <td>0</td>\n      <td>36</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>34</td>\n      <td>65</td>\n      <td>62</td>\n      <td>0</td>\n      <td>1</td>\n      <td>7</td>\n      <td>9</td>\n      <td>30</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>32</td>\n      <td>62</td>\n      <td>34</td>\n      <td>3</td>\n      <td>9</td>\n      <td>22</td>\n      <td>0</td>\n      <td>20</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>28</td>\n      <td>54</td>\n      <td>46</td>\n      <td>1</td>\n      <td>6</td>\n      <td>35</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>94</td>\n      <td>25</td>\n      <td>50</td>\n      <td>32</td>\n      <td>1</td>\n      <td>7</td>\n      <td>24</td>\n      <td>0</td>\n      <td>19</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>95</th>\n      <td>95</td>\n      <td>30</td>\n      <td>60</td>\n      <td>27</td>\n      <td>3</td>\n      <td>9</td>\n      <td>4</td>\n      <td>17</td>\n      <td>17</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>96</th>\n      <td>96</td>\n      <td>38</td>\n      <td>72</td>\n      <td>51</td>\n      <td>2</td>\n      <td>10</td>\n      <td>39</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>97</th>\n      <td>97</td>\n      <td>36</td>\n      <td>60</td>\n      <td>43</td>\n      <td>4</td>\n      <td>4</td>\n      <td>15</td>\n      <td>0</td>\n      <td>41</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>98</th>\n      <td>98</td>\n      <td>29</td>\n      <td>58</td>\n      <td>57</td>\n      <td>0</td>\n      <td>8</td>\n      <td>12</td>\n      <td>0</td>\n      <td>10</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n<p>99 rows × 10 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 99
+     "execution_count": 16
     }
    ],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Temparature</th>\n      <th>Humidity</th>\n      <th>Moisture</th>\n      <th>Soil Type</th>\n      <th>Crop Type</th>\n      <th>Nitrogen</th>\n      <th>Potassium</th>\n      <th>Phosphorous</th>\n      <th>Fertilizer Name</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>26</td>\n      <td>52</td>\n      <td>38</td>\n      <td>4</td>\n      <td>3</td>\n      <td>37</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>29</td>\n      <td>52</td>\n      <td>45</td>\n      <td>2</td>\n      <td>8</td>\n      <td>12</td>\n      <td>0</td>\n      <td>36</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>34</td>\n      <td>65</td>\n      <td>62</td>\n      <td>0</td>\n      <td>1</td>\n      <td>7</td>\n      <td>9</td>\n      <td>30</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>32</td>\n      <td>62</td>\n      <td>34</td>\n      <td>3</td>\n      <td>9</td>\n      <td>22</td>\n      <td>0</td>\n      <td>20</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>28</td>\n      <td>54</td>\n      <td>46</td>\n      <td>1</td>\n      <td>6</td>\n      <td>35</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>25</td>\n      <td>50</td>\n      <td>32</td>\n      <td>1</td>\n      <td>7</td>\n      <td>24</td>\n      <td>0</td>\n      <td>19</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>95</th>\n      <td>30</td>\n      <td>60</td>\n      <td>27</td>\n      <td>3</td>\n      <td>9</td>\n      <td>4</td>\n      <td>17</td>\n      <td>17</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>96</th>\n      <td>38</td>\n      <td>72</td>\n      <td>51</td>\n      <td>2</td>\n      <td>10</td>\n      <td>39</td>\n      <td>0</td>\n      <td>0</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>97</th>\n      <td>36</td>\n      <td>60</td>\n      <td>43</td>\n      <td>4</td>\n      <td>4</td>\n      <td>15</td>\n      <td>0</td>\n      <td>41</td>\n      <td>5</td>\n    </tr>\n    <tr>\n      <th>98</th>\n      <td>29</td>\n      <td>58</td>\n      <td>57</td>\n      <td>0</td>\n      <td>8</td>\n      <td>12</td>\n      <td>0</td>\n      <td>10</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n<p>99 rows × 9 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 100
+     "execution_count": 17
     }
    ],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 102
+     "execution_count": 19
     }
    ],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 103
+     "execution_count": 20
     }
    ],
    "source": [
@@ -392,27 +392,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_Train,X_Test,y_Train,y_Test=train_test_split(X,y,test_size=0.1,random_state=2)"
+    "X_Train,X_Test,y_Train,y_Test=train_test_split(X,y,test_size=0.4,random_state=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "3"
+       "5"
       ]
      },
      "metadata": {},
-     "execution_count": 105
+     "execution_count": 22
     }
    ],
    "source": [
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,18 +434,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "KNeighborsClassifier(metric='euclidean', n_neighbors=3)"
+       "KNeighborsClassifier(metric='euclidean')"
       ]
      },
      "metadata": {},
-     "execution_count": 107
+     "execution_count": 24
     }
    ],
    "source": [
@@ -454,18 +454,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([2, 4, 6, 3, 6, 6, 1, 6, 1, 4], dtype=int64)"
+       "array([3, 4, 6, 3, 6, 6, 1, 6, 5, 4, 4, 1, 0, 5, 6, 1, 4, 4, 4, 0, 6, 1,\n",
+       "       4, 5, 6, 3, 3, 3, 6, 5, 5, 1, 6, 6, 1, 1, 1, 5, 1, 1], dtype=int64)"
       ]
      },
      "metadata": {},
-     "execution_count": 108
+     "execution_count": 25
     }
    ],
    "source": [
@@ -475,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -492,11 +493,41 @@
        "27    6\n",
        "28    5\n",
        "13    4\n",
+       "98    3\n",
+       "91    0\n",
+       "88    0\n",
+       "14    5\n",
+       "0     6\n",
+       "21    2\n",
+       "3     4\n",
+       "29    3\n",
+       "61    3\n",
+       "78    0\n",
+       "35    6\n",
+       "11    2\n",
+       "83    3\n",
+       "44    5\n",
+       "96    6\n",
+       "5     2\n",
+       "25    4\n",
+       "76    4\n",
+       "73    6\n",
+       "62    4\n",
+       "65    5\n",
+       "1     5\n",
+       "18    6\n",
+       "48    6\n",
+       "36    1\n",
+       "77    3\n",
+       "6     3\n",
+       "74    5\n",
+       "90    1\n",
+       "10    5\n",
        "Name: Fertilizer Name, dtype: int64"
       ]
      },
      "metadata": {},
-     "execution_count": 109
+     "execution_count": 26
     }
    ],
    "source": [
@@ -505,18 +536,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "0.8"
+       "0.6"
       ]
      },
      "metadata": {},
-     "execution_count": 110
+     "execution_count": 27
     }
    ],
    "source": [
@@ -526,14 +557,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "              precision    recall  f1-score   support\n\n           1       0.50      0.50      0.50         2\n           2       0.00      0.00      0.00         1\n           3       1.00      1.00      1.00         1\n           4       1.00      1.00      1.00         2\n           5       0.00      0.00      0.00         0\n           6       1.00      1.00      1.00         4\n\n    accuracy                           0.80        10\n   macro avg       0.58      0.58      0.58        10\nweighted avg       0.80      0.80      0.80        10\n\n"
+      "              precision    recall  f1-score   support\n\n           0       0.67      1.00      0.80         2\n           1       0.75      0.30      0.43        10\n           2       0.00      0.00      0.00         0\n           3       0.14      0.20      0.17         5\n           4       0.50      0.43      0.46         7\n           5       0.71      0.83      0.77         6\n           6       1.00      1.00      1.00        10\n\n    accuracy                           0.60        40\n   macro avg       0.54      0.54      0.52        40\nweighted avg       0.68      0.60      0.61        40\n\n"
      ]
     }
    ],
