--- a/notebooks/CropRecommendation/CropRecommendation1/NPKPrediction/models/npkPredictionSDG.ipynb
+++ b/notebooks/CropRecommendation/CropRecommendation1/NPKPrediction/models/npkPredictionSDG.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>N</th>\n      <th>P</th>\n      <th>K</th>\n      <th>temperature</th>\n      <th>humidity</th>\n      <th>rainfall</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>90</td>\n      <td>42</td>\n      <td>43</td>\n      <td>20.879744</td>\n      <td>82.002744</td>\n      <td>202.935536</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>85</td>\n      <td>58</td>\n      <td>41</td>\n      <td>21.770462</td>\n      <td>80.319644</td>\n      <td>226.655537</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>60</td>\n      <td>55</td>\n      <td>44</td>\n      <td>23.004459</td>\n      <td>82.320763</td>\n      <td>263.964248</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>74</td>\n      <td>35</td>\n      <td>40</td>\n      <td>26.491096</td>\n      <td>80.158363</td>\n      <td>242.864034</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>78</td>\n      <td>42</td>\n      <td>42</td>\n      <td>20.130175</td>\n      <td>81.604873</td>\n      <td>262.717340</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1180</th>\n      <td>1180</td>\n      <td>107</td>\n      <td>34</td>\n      <td>32</td>\n      <td>26.774637</td>\n      <td>66.413269</td>\n      <td>177.774507</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1181</th>\n      <td>1181</td>\n      <td>99</td>\n      <td>15</td>\n      <td>27</td>\n      <td>27.417112</td>\n      <td>56.636362</td>\n      <td>127.924610</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1182</th>\n      <td>1182</td>\n      <td>118</td>\n      <td>33</td>\n      <td>30</td>\n      <td>24.131797</td>\n      <td>67.225123</td>\n      <td>173.322839</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1183</th>\n      <td>1183</td>\n      <td>117</td>\n      <td>32</td>\n      <td>34</td>\n      <td>26.272418</td>\n      <td>52.127394</td>\n      <td>127.175293</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1184</th>\n      <td>1184</td>\n      <td>104</td>\n      <td>18</td>\n      <td>30</td>\n      <td>23.603016</td>\n      <td>60.396475</td>\n      <td>140.937041</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n<p>1185 rows × 8 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 91
     }
    ],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>N</th>\n      <th>P</th>\n      <th>K</th>\n      <th>temperature</th>\n      <th>humidity</th>\n      <th>rainfall</th>\n      <th>label</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>90</td>\n      <td>42</td>\n      <td>43</td>\n      <td>20.879744</td>\n      <td>82.002744</td>\n      <td>202.935536</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>85</td>\n      <td>58</td>\n      <td>41</td>\n      <td>21.770462</td>\n      <td>80.319644</td>\n      <td>226.655537</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>60</td>\n      <td>55</td>\n      <td>44</td>\n      <td>23.004459</td>\n      <td>82.320763</td>\n      <td>263.964248</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>74</td>\n      <td>35</td>\n      <td>40</td>\n      <td>26.491096</td>\n      <td>80.158363</td>\n      <td>242.864034</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>78</td>\n      <td>42</td>\n      <td>42</td>\n      <td>20.130175</td>\n      <td>81.604873</td>\n      <td>262.717340</td>\n      <td>11</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1180</th>\n      <td>107</td>\n      <td>34</td>\n      <td>32</td>\n      <td>26.774637</td>\n      <td>66.413269</td>\n      <td>177.774507</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1181</th>\n      <td>99</td>\n      <td>15</td>\n      <td>27</td>\n      <td>27.417112</td>\n      <td>56.636362</td>\n      <td>127.924610</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1182</th>\n      <td>118</td>\n      <td>33</td>\n      <td>30</td>\n      <td>24.131797</td>\n      <td>67.225123</td>\n      <td>173.322839</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1183</th>\n      <td>117</td>\n      <td>32</td>\n      <td>34</td>\n      <td>26.272418</td>\n      <td>52.127394</td>\n      <td>127.175293</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1184</th>\n      <td>104</td>\n      <td>18</td>\n      <td>30</td>\n      <td>23.603016</td>\n      <td>60.396475</td>\n      <td>140.937041</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n<p>1185 rows × 7 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 92
     }
    ],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>N</th>\n      <th>P</th>\n      <th>K</th>\n      <th>temperature</th>\n      <th>humidity</th>\n      <th>rainfall</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>90</td>\n      <td>42</td>\n      <td>43</td>\n      <td>20.879744</td>\n      <td>82.002744</td>\n      <td>202.935536</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>85</td>\n      <td>58</td>\n      <td>41</td>\n      <td>21.770462</td>\n      <td>80.319644</td>\n      <td>226.655537</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>60</td>\n      <td>55</td>\n      <td>44</td>\n      <td>23.004459</td>\n      <td>82.320763</td>\n      <td>263.964248</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>74</td>\n      <td>35</td>\n      <td>40</td>\n      <td>26.491096</td>\n      <td>80.158363</td>\n      <td>242.864034</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>78</td>\n      <td>42</td>\n      <td>42</td>\n      <td>20.130175</td>\n      <td>81.604873</td>\n      <td>262.717340</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1180</th>\n      <td>107</td>\n      <td>34</td>\n      <td>32</td>\n      <td>26.774637</td>\n      <td>66.413269</td>\n      <td>177.774507</td>\n    </tr>\n    <tr>\n      <th>1181</th>\n      <td>99</td>\n      <td>15</td>\n      <td>27</td>\n      <td>27.417112</td>\n      <td>56.636362</td>\n      <td>127.924610</td>\n    </tr>\n    <tr>\n      <th>1182</th>\n      <td>118</td>\n      <td>33</td>\n      <td>30</td>\n      <td>24.131797</td>\n      <td>67.225123</td>\n      <td>173.322839</td>\n    </tr>\n    <tr>\n      <th>1183</th>\n      <td>117</td>\n      <td>32</td>\n      <td>34</td>\n      <td>26.272418</td>\n      <td>52.127394</td>\n      <td>127.175293</td>\n    </tr>\n    <tr>\n      <th>1184</th>\n      <td>104</td>\n      <td>18</td>\n      <td>30</td>\n      <td>23.603016</td>\n      <td>60.396475</td>\n      <td>140.937041</td>\n    </tr>\n  </tbody>\n</table>\n<p>1185 rows × 6 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 93
     }
    ],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 94
     }
    ],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 98
     }
    ],
    "source": [
@@ -223,47 +223,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([ 1.14360101e+13,  2.92390874e+12,  4.50675961e+12, -2.57971017e+12,\n",
-       "       -8.62660526e+11,  1.65678774e+13,  1.48504561e+13,  1.47551128e+13,\n",
-       "       -3.21663797e+12, -1.68836674e+12,  2.48370819e+12, -4.61310271e+12,\n",
-       "        7.55113529e+12,  3.20650689e+12,  1.03722975e+13,  3.53502368e+12,\n",
-       "        6.74462976e+12,  1.08988292e+13,  2.11158697e+12,  1.57955856e+13,\n",
-       "       -4.03908030e+12,  6.14997601e+12, -8.09752375e+11,  3.88751826e+12,\n",
-       "        1.45395720e+13,  4.06619837e+12, -1.21400888e+12, -3.07951544e+12,\n",
-       "        8.14404120e+12,  6.24460672e+12,  3.09768740e+12, -1.85908302e+11,\n",
-       "       -2.20614254e+12,  1.38443648e+12,  1.20776237e+13, -1.29449566e+11,\n",
-       "       -2.13718683e+12,  8.56191349e+12, -8.92244037e+11,  1.54189427e+13,\n",
-       "       -2.95115283e+12,  1.20135840e+13,  4.77245610e+12,  8.41200553e+12,\n",
-       "       -2.14276678e+12,  4.33252507e+12, -2.23991257e+12,  1.56358314e+12,\n",
-       "       -1.70662332e+11, -1.69546206e+12,  9.10089992e+11,  7.76750626e+12,\n",
-       "        3.47114639e+12,  4.26952967e+12,  1.22974803e+13,  3.81012223e+12,\n",
-       "        1.43163237e+12,  1.05381934e+13, -2.91976175e+12,  1.35993324e+13,\n",
-       "        1.70525819e+13, -4.66696542e+11,  6.68319192e+11,  1.32356664e+13,\n",
-       "        1.24857879e+13, -2.83118047e+12, -5.95172519e+11,  1.58404334e+13,\n",
-       "        1.69901704e+13,  1.14085700e+13,  1.70733478e+13,  1.10158382e+13,\n",
-       "        4.02028337e+11, -2.01957340e+12, -4.37139883e+10,  1.31428838e+13,\n",
-       "       -1.97854221e+12,  1.22141544e+13,  1.88965076e+12,  7.24377277e+12,\n",
-       "        3.08293626e+12,  7.09771829e+12,  4.13973127e+12,  1.63184158e+12,\n",
-       "       -5.16921773e+12,  2.92087462e+12, -1.77399396e+12,  1.14025760e+13,\n",
-       "        1.80651094e+13,  6.58857223e+11,  2.10170550e+12, -1.03661570e+12,\n",
-       "        1.09603456e+13,  1.62061289e+13,  2.67652334e+12,  9.99251360e+12,\n",
-       "        8.05928581e+12,  9.95566998e+12,  3.32930854e+12,  1.48684338e+13,\n",
-       "       -6.54116176e+10, -8.53277691e+11,  1.09888359e+13, -4.06588282e+12,\n",
-       "        1.27515611e+13,  1.11778534e+13,  6.33306192e+11,  1.02564608e+12,\n",
-       "        1.62973814e+13,  9.04554187e+12, -1.60954892e+11,  1.12592883e+13,\n",
-       "        6.39086189e+12,  1.39003823e+13,  7.62068911e+12,  1.13077069e+12,\n",
-       "        1.89758147e+12,  1.50089754e+12,  5.78763679e+12])"
+       "array([ 1.16715392e+13,  1.06303317e+13,  3.27192048e+12, -2.56430805e+12,\n",
+       "        1.12966342e+13,  1.55434227e+13,  1.03720476e+13,  1.75424671e+13,\n",
+       "       -3.75002754e+12,  1.19022619e+13,  4.45455426e+12, -2.01260702e+13,\n",
+       "       -2.24202541e+12,  1.66548020e+12, -7.94227010e+11, -1.29090101e+12,\n",
+       "        2.14678253e+12,  1.25794320e+13,  9.90432343e+12,  4.84217925e+12,\n",
+       "       -1.77317895e+13,  2.30869663e+12,  1.23298187e+13,  6.31835344e+12,\n",
+       "        7.59815994e+12, -7.76123405e+11, -2.12467136e+13, -4.47526048e+12,\n",
+       "       -1.90334380e+11,  2.97065684e+12, -2.77648892e+12, -3.58704125e+12,\n",
+       "       -1.94677271e+13,  1.31813482e+13,  8.83329700e+12,  1.05603068e+13,\n",
+       "       -2.06847820e+12,  9.61208481e+12,  1.26047822e+13,  1.35403368e+13,\n",
+       "       -4.65464176e+12,  1.29665263e+13, -9.54438859e+11, -1.17482827e+12,\n",
+       "       -3.44524782e+12,  7.00891763e+12, -4.19904630e+12,  6.45592063e+12,\n",
+       "       -1.18198686e+12, -2.38150766e+13,  1.05360144e+13,  3.80904805e+10,\n",
+       "       -7.52644270e+11,  5.95134071e+12,  1.19085359e+13, -1.27821654e+12,\n",
+       "        6.97674467e+12,  8.63832306e+12, -1.74213162e+13,  1.23802959e+13,\n",
+       "        1.00407316e+13, -1.85904846e+12, -4.07231887e+12,  1.59855327e+13,\n",
+       "       -1.73966981e+12, -2.33249754e+12, -2.11322053e+13,  1.93423988e+13,\n",
+       "        8.77619225e+12,  1.18827243e+13,  1.59053170e+13, -3.41934106e+12,\n",
+       "        1.26441649e+13, -2.23781056e+13, -1.59906766e+12,  9.22412711e+12,\n",
+       "       -4.18808994e+12,  1.23576230e+13,  5.18568637e+12,  9.03592989e+12,\n",
+       "        5.24338180e+12,  1.43458075e+13,  4.14276518e+12, -8.60131372e+11,\n",
+       "       -2.25324693e+13, -1.81814788e+12,  1.12480372e+13,  1.29150360e+13,\n",
+       "        1.60753926e+13,  4.46173178e+12,  1.25869667e+12, -2.39029051e+12,\n",
+       "        1.33934567e+13,  6.96446783e+12,  3.43161694e+11, -2.71163612e+11,\n",
+       "        1.55312192e+12, -1.49191201e+12, -2.16626597e+12,  1.12954820e+13,\n",
+       "        1.24894730e+13, -2.79117563e+12,  8.51712403e+12, -2.50257938e+12,\n",
+       "        1.02123565e+13,  3.66925963e+12, -5.11049700e+11, -5.61940238e+12,\n",
+       "        1.91012445e+13,  1.32882702e+13, -5.35173006e+11, -2.13557535e+12,\n",
+       "        1.07690752e+13, -1.68607257e+12,  7.68836099e+12,  5.02480157e+12,\n",
+       "       -3.03527752e+11,  4.86325926e+12,  5.80113644e+10])"
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 99
     }
    ],
    "source": [
@@ -273,33 +273,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "1041    5\n",
-       "862     9\n",
-       "511     8\n",
-       "327     6\n",
-       "842     9\n",
-       "       ..\n",
-       "998     5\n",
-       "508     8\n",
-       "263     2\n",
-       "525     8\n",
-       "182     7\n",
-       "Name: label, Length: 119, dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 12
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1041    5\n862     9\n511     8\n327     6\n842     9\n       ..\n998     5\n508     8\n263     2\n525     8\n182     7\nName: label, Length: 119, dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "y_Test"
+    "print(y_Test)"
    ]
   }
  ]
